--- a/index.html
+++ b/index.html
@@ -6,6 +6,40 @@
     <title>WebSite</title>
   </head>
   <body>
-
+      <header>
+        <a href="#"><img src="#" alt="logo da Mind mentor"></a>
+        <nav>
+            <ul>
+                <li><a href="#">How it works</a></li>
+                <li><a href="#">Our community</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Client reviews</a></li>
+            </ul>
+        </nav>
+        <a href="#"><button>Try of free</button></a>
+     </header>
+     <section id="principal">
+         <h1> Your <img src="#" alt="primeira pessoa"> <img src="#" alt="segunda pessoa"> personalized Al for mindfulness</h1>
+         <p>Neuroscience-Backed Mindfulness</p>
+         <p>Embark on a journey towards inner peace, balance and self-discovery</p>
+         <a href="#">Get the app</a>
+     </section>
+     <section id="secundária">
+          <img src="#" alt="foto de um senhor com a mão no queixo">
+          <h3>
+            Developed together with science-based mental health experts
+          </h3>
+          <p id= "+12"><strong>+12</strong></p>
+          <p>Evidence-based therapy methods avaliable</p>
+          <button>CBT</button> <button>MSBSR</button> <button>ACT</button>
+          <p id= "200+"><strong>200+</strong></p>
+          <p>Therapists avaliable for personal appointements</p>
+     </section>
+     <section id="avaliação">
+           <img src="#" alt="foto de um celular">
+           <p>Top-rated app </p>
+           <h4>4.8</h4>
+           <p>Explore our customer reviews on app store</p>
+     </section>
   </body>
 </html>
